--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <!-- Lab Showcase -->
         <div class="card-container">
             <div class="card">
-                <h2>Lab 1: GitHub Project Management</h2>
+                <h2>Lab 1:</h2>
+                <h2>GitHub Project Management</h2>
                 <p>Learned GitHub repository setup, version control, and Markdown formatting.</p>
                 <a href="html2.html" class="btn">View Lab 1</a>
             </div>
